2015-06-06  Russell G. Almond  <ralmond@Limu>

	* R/PnetNetica.R (Pnode.default, as.Pnode.NeticaNode): Added
	constructors. 
	(as.Pnet.NeticaBN): Added constructors.
	("PnetPnodes<-".NeticaBN): Added setter.

2015-06-05  Russell G. Almond  <ralmond@Limu>

	* R/PnetNetica.R (PnetPriorWeight.NeticaBN)
	(PnodeRules.NeticaNode, PnodeLink.NeticaNode)
	("PnodeLink<-.NeticaNode", PnodeQ.NeticaNode)
	(PnodeLnAlphas.NeticaNode, PnodeBetas.NeticaNode)
	(PnodeLinkScale.NeticaNode, PnodePriorWeight.NeticaNode): Reworked
	to use NodeUserObj/NetworkUserObj

2015-05-19  Russell G. Almond  <ralmond@Limu>

	* R/PnetNetica.R ("PnodeQ<-.NeticaNode", PnodeQ.NeticaNode): Added.
	(maxCPTParam.NeticaNode, BuildTable.NeticaNode): Added Q.

	* DESCRIPTION (Depends): Broke off from Peanut

2015-03-04  Russell G. Almond  <ralmond@Limu>

	* DESCRIPTION (Package): Created.

2015-03-04  Russell G. Almond  <ralmond@Limu>

	* R/Pnets.R (dputToString, dgetFromString): Created.  Need to store
	S-objects as strings inside of Netica User fields.
	(is.Pnet, PnetPriorWeight, "PnetPriorWeight<-"): Created.
	(is.Pnode, PnodeRules, "PnodeRules<-", PnodeLink, "PnodeLink<-")
	(PnodeLnAlphas, "PnodeLnAlphas<-", PnodeBetas, "PnodeBetas<-")
	(PnodeLinkScale, "PnodeLinkScale<-", PnodePriorWeight)
	("PnodePriorWeight<-"): Created.
	(PnodeBuildTable, PnetBuildTables): Created.

	

